--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@supabase/supabase-js": "^2.0.0"
   },
   "devDependencies": {
-    "vercel": "^31.0.0"  // Use the latest version of the Vercel CLI
+    "vercel": "^31.0.0" 
   },
   "author": "",
   "license": "MIT"
